tests/unit/default/syntax-error/139-add-fk-child-to-parent-upd.x.t
---- IN ----
+FK%child.parent-id=>%parent.id*|
---- OUT ----
---- ERR ----
syntax: expected `!` , `>` or `?` after `...rent-id=>%parent.id*` near `|` at position 32 - at line 1
---- EXIT ----
1
